# rectifiedgrid

./: README.md  pyproject.toml  setup.py
rectifiedgrid/: core.py  demo.py  hillshade.py  utils.py
src/rectifiedgrid/: __init__.py  utils.py
test/: air.dbf  air.shp  air.shx  test_algebra.py  test_crop.py  test_initialization.py  test_mask.py  test_plotmap.py  test_projection.py
test/data/: b04.tiff  b08.tiff  ndvi.tiff  wrong_fill_value.tiff
